# Banker

./: .env.example  .gitignore  LICENSE  README.md  dev.py  indian_bank_clean.sql  pyproject.toml  requirements.txt  start.bat
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: banks.py  branches.py
app/core/: config.py  database.py
app/models/: bank.py  branch.py
app/schemas/: bank.py  branch.py
app/services/: bank_service.py  branch_service.py
app/utils/: pagination.py
scripts/: load_data.py  test.bat  test.sh
tests/: conftest.py  test_api.py  test_banks.py  test_branches.py  test_services.py
